<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/txtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/examesCategoria" />

        <RadioGroup
            android:id="@+id/radioGroup_type_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton_pesados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/examesPesados" />

            <RadioButton
                android:id="@+id/radioButton_ligeiros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/examesLigeiros" />

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/examesTipos" />
        <RadioGroup
            android:id="@+id/radioGroup_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton_pratico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/examesPraticos" />

            <RadioButton
                android:id="@+id/radioButton_teoricos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/examesTeoricos" />

        </RadioGroup>




        <EditText
            android:id="@+id/txtBI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bi"
            />

        <EditText
            android:id="@+id/txtAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/idade"
            />

        <EditText
            android:id="@+id/txtAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/morada"
            />

        <EditText
            android:id="@+id/txtContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contacto"
            />
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar" />

        <Button
            android:id="@+id/btnList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listar" />



    </LinearLayout>


</ScrollView>